@@ -58,6 +58,13 @@
 
 .ui-menu .ui-menu-item .ui-menu-item-wrapper {
   border: 1px solid transparent; // ensure border on hover (active) does not move content
+  color: theme('colors.text-context');
+
+  // use this instead of :hover as the UI's hover state is controlled via JS
+  // and there is a delay before the hover state is removed when the mouse leaves
+  &.ui-state-active {
+    color: theme('colors.text-label-menus-active');
+  }
 }
 
 .tagit-close {
